--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title> Drop Mail </title>
+    <title> DropMail.com</title>
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
